@@ -1,6 +1,7 @@
 Upcoming:
 - The builder and shield projector use a better fake player that matches the name of the real player if online
 - Fixed xray problem with the support blocks
+- The Builder will now also support the filter module for item collection
 
 1.16-3.1.0:
 - Small fix for mojang mappings
